--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.0",
     "axios": "^1.3.4",
+    "jspdf": "^2.5.1",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.9.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.1",
     "styled-components": "^5.3.8",
     "validator": "^13.9.0",
