--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.3.0",
     "axios": "^1.3.4",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
